[build-system]
requires = ["setuptools >= 43.0.0", "wheel", "setuptools-rust", "colorama", "tqdm", "setuptools_scm[toml]>=6.0"]
build-backend = 'setuptools.build_meta'

[tool.black]
line-length = 88
target-version = ['py37', 'py38']
include = '\.pyi?$'

[tool.setuptools_scm]
local_scheme = "no-local-version"
write_to = "persia/version.py"
write_to_template = "__version__ = \"{version}\""
