[package]
name = "example-service"
version = "0.1.0"
authors = ["Xiangru Lian <admin@mail.xrlian.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
persia-rpc = { path = "../persia-rpc" }
hyper = { version = "0.14", features = ["full"] }
futures-util = "0.3"
structopt = "0.3"
tokio = { version = "1", features = ["full"] }
persia-speedy = "0.9"
bytes = "1.0"
lz4 = "1.23"
snafu = { version = "0.6", features = ["backtraces"] }
reqwest = "0.11"
anyhow = "1"
once_cell = "1.5"
tracing = "*"
tracing-subscriber = "*"
