[package]
authors = ["Kuaishou AI Platform PersiaML Team <zhuxuefeng@kuaishou.com>"]
edition = "2018"
license = "MIT"
name = "persia-operator"
publish = false
version = "0.1.0"

[dependencies]
tokio = { version = "~1.0", features = ["full"] }
kube = { version = "~0.60", default-features = true, features = ["derive", "rustls-tls"] }
kube-derive = "~0.60"
kube-runtime = "~0.60"
k8s-openapi = { version = "~0.13", default-features = false, features = ["v1_17", "schemars"] }
futures = "~0.3"
serde = "~1.0"
serde_json = "~1.0"
schemars = "~0.8"
thiserror = "~1.0"
serde_yaml = "~0.8"
parking_lot = {version = "~0.11", features = ["deadlock_detection"]}
tracing = "~0.1"
tracing-subscriber = "~0.2"
actix-web = "~3.3"
once_cell = "1.8.0"
openssl = { version = "0.10", features = ["vendored"] }
openssl-sys = "0.9.70"
structopt = "0.3"
collection_macros = "0.2.0"
anyhow = "1.0"
bytes = "1.1.0"

[[bin]]
name = "operator"
path = "src/bin/operator.rs"

[[bin]]
name = "gencrd"
path = "src/bin/gencrd.rs"

[[bin]]
name = "server"
path = "src/bin/server.rs"

[[bin]]
name = "e2e"
path = "src/bin/e2e.rs"
