[package]
authors = ["Kuaishou AI Platform PersiaML Team <admin@mail.xrlian.com>"]
edition = "2018"
name = "persia-core"
publish = ["private"]
version = "0.1.0"
license = "MIT"

[lib]
crate-type = ["cdylib"]
name = "persia_core"
path = "src/lib.rs"

[dependencies]
persia-embedding-config = {path = "../persia-embedding-config"}
persia-embedding-datatypes = {path = "../persia-embedding-datatypes"}
persia-embedding-sharded-server = {path = "../persia-embedding-sharded-server"}
persia-futures = {path = "../persia-futures"}
persia-message-queue = {path = "../persia-message-queue"}
persia-metrics = {path = "../persia-metrics"}
persia-model-manager = {path = "../persia-model-manager"}
persia-nats-marcos = {path = "../others/persia-nats-marcos"}
persia-nats-client = {path = "../others/persia-nats-client"}
resource_pool = {path = "../persia-resource-pool"}
anyhow = "1.0"
bytes = "1.0"
color-eyre = "0.5"
cuda-runtime-sys = {version = "0.3.0-alpha.1", optional = true}
futures = "0.3"
half = "1.6"
hashbrown = "0.11.2"
ndarray = "0.14"
numpy = "0.13"
once_cell = "1.3"
parking_lot = "0.11"
paste = "1"
persia-rpc = "0.6"
persia-speedy = "0.9"
rand = "0.8"
shadow-rs = "0.5"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = "0.2.5"
retry = "1.2.1"

[features]
default = []

cuda = ["cuda-runtime-sys"]

[dependencies.pyo3]
default-features = false
features = ["macros"]
version = "0.13"

[build-dependencies]
shadow-rs = "0.5"
