[package]
authors = ["Kuaishou AI Platform PersiaML Team <admin@mail.xrlian.com>"]
edition = "2018"
name = "persia-embedding-config"
publish = false
version = "0.1.0"
license = "MIT"

[dependencies]
get_if_addrs = "0.5.3"
once_cell = "1.3"
persia-speedy = "0.9"
serde = {version = "1.0", features = ["derive"]}
thiserror = "1.0"
tracing = "0.1"
serde_yaml = "0.8"
