[package]
authors = ["Kuaishou AI Platform PersiaML Team <zhuxuefeng@kuaishou.com>"]
edition = "2018"
name = "persia-embedding-holder"
publish = false
version = "0.1.0"
license = "MIT"

[dependencies]
persia-embedding-config = {path = "../persia-embedding-config"}
persia-embedding-datatypes = {path = "../persia-embedding-datatypes"}
persia-eviction-map = {path = "../persia-eviction-map"}
persia-speedy = "0.9"
once_cell = "1.3"
parking_lot = { version = "0.11" }
thiserror = "1.0"
hashbrown = "0.9"
