[package]
authors = ["Kuaishou AI Platform PersiaML Team <admin@mail.xrlian.com>"]
edition = "2018"
name = "persia-embedding-sharded-server"
version = "0.1.0"
license = "MIT"

[dependencies]
persia-embedding-config = {path = "../persia-embedding-config"}
persia-embedding-datatypes = {path = "../persia-embedding-datatypes", default-features = false}
persia-embedding-holder = {path = "../persia-embedding-holder"}
persia-eviction-map = {path = "../persia-eviction-map"}
persia-full-amount-manager = {path = "../persia-full-amount-manager"}
persia-futures = {path = "../persia-futures"}
persia-incremental-update-manager = {path = "../persia-incremental-update-manager"}
persia-metrics = {path = "../persia-metrics"}
persia-model-manager = {path = "../persia-model-manager"}
persia-nats-marcos = {path = "../others/persia-nats-marcos"}
persia-nats-client = {path = "../others/persia-nats-client"}
persia-simd = {path = "../persia-simd"}
anyhow = "1"
bytes = {version = "1.0", features = ["serde"]}
color-eyre = "0.5.4"
crossbeam = "0.8"
farmhash = "1"
futures = "0.3"
half = "1.6"
hashbrown = "0.9"
hyper = "0.14.2"
hyperloglogplus = "0.3"
indexmap = {version = "1.5", features = ["serde-1"]}
itertools = "0.10"
lz4 = "1.23"
mimalloc = {version = "0.1", default-features = false}
ndarray = {version = "0.14", features = ["serde"]}
ndarray-rand = "0.13"
once_cell = "1.4"
parking_lot = "0.11"
persia-rpc = "0.6"
persia-speedy = "0.9"
rand = {version = "0.8", features = ["small_rng"]}
rand_distr = "0.4"
random-fast-rng = "0.1"
retry = "1.2.1"
serde = "1.0"
serde_bytes = "0.11"
serde_yaml = "0.8"
shadow-rs = "0.5"
snafu = "0.6"
structopt = "0.3"
thiserror = "1.0"
thread_local = "1.0"
tokio = {version = "1.1", features = ["full"]}
tracing = "0.1"
tracing-subscriber = "0.2"

[dev-dependencies]
bincode = "1.3"
criterion = "0.3"
criterion-macro = "0.3"
rand = "0.8"
seahash = "4.0"
wyhash = "0.5"

[[bin]]
name = "persia-embedding-sharded-server"
path = "src/bin/persia-embedding-sharded-server.rs"

[[bin]]
name = "persia-embedding-sharded-middleware"
path = "src/bin/persia-embedding-sharded-middleware.rs"

[build-dependencies]
shadow-rs = "0.5"
