[package]
authors = ["Kuaishou AI Platform PersiaML Team <admin@mail.xrlian.com>"]
edition = "2018"
name = "persia-full-amount-manager"
license = "MIT"
version = "0.1.0"

[dependencies]
persia-embedding-config = {path = "../persia-embedding-config"}
persia-embedding-datatypes = {path = "../persia-embedding-datatypes", default-features = false}
persia-eviction-map = {path = "../persia-eviction-map"}
persia-futures = {path = "../persia-futures"}
persia-speedy = "0.9"
hashbrown = "0.9.1"
once_cell = "1.3"
parking_lot = "0.11"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.2.5"
