[package]
name = "persia-model-manager"
version = "0.1.0"
authors = ["Kuaishou AI Platform PersiaML Team <zhuxuefeng@kuaishou.com>"]
edition = "2018"
publish = false
license = "MIT"

[dependencies]
persia-embedding-config = { path = "../persia-embedding-config" }
persia-futures = { path = "../persia-futures" }
persia-embedding-datatypes = { path = "../persia-embedding-datatypes" }
persia-full-amount-manager = { path = "../persia-full-amount-manager" }
persia-eviction-map = { path = "../persia-eviction-map" }
persia-storage-visitor = { path = "../persia-storage-visitor" }
persia-embedding-holder = { path = "../persia-embedding-holder" }
persia-speedy = "0.9"
tracing = "0.1"
parking_lot = { version = "0.11" }
chrono = "0.4"
thiserror = "1.0"
hashbrown = "0.9"
anyhow = "1"
rayon = "1.5.1"
once_cell = "1.3"
