[package]
name = "persia-rpc-macro"
version = "0.1.10"
authors = ["Xiangru Lian <admin@mail.xrlian.com>"]
edition = "2018"
description = "proc macros for the persia-rpc crate"
license = "AGPL-3.0-or-later"
repository = "https://github.com/L1AN0/persia-rpc"
homepage = "https://github.com/L1AN0/persia-rpc"
keywords = ["rpc"]
categories = ["network-programming"]

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0", features = ["full"] }
quote = "1.0"
proc-macro-crate = "0.1"
