[package]
name = "persia-rpc"
version = "0.1.0"
authors = ["Xiangru Lian <admin@mail.xrlian.com>"]
edition = "2018"
description = "high performance rpc framework on http2"
license = "AGPL-3.0-or-later"
repository = "https://github.com/L1AN0/persia-rpc"
homepage = "https://github.com/L1AN0/persia-rpc"
keywords = ["rpc"]
categories = ["network-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
persia-rpc-macro = { version = "0.1", path = "../persia-rpc-macro" }
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
bytes = "0.5"
tracing = "0.1"
futures = "0.3"
reqwest = { version = "0.10", default-features = false, features = ["native-tls-vendored"] }
hyper = "0.13"
snafu = "0.6"
url = "2.1"
smol = "1"
