[package]
name = "persia-rpc"
version = "0.5.0"
authors = ["Xiangru Lian <admin@mail.xrlian.com>"]
edition = "2018"
description = "high performance rpc framework on http2"
license = "AGPL-3.0-or-later"
repository = "https://github.com/L1AN0/persia-rpc"
homepage = "https://github.com/L1AN0/persia-rpc"
keywords = ["rpc"]
categories = ["network-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
persia-rpc-macro = { version = "0.3", path = "../persia-rpc-macro" }
persia-speedy = "0.8"
bytes = "1.0"
tracing = "0.1"
futures = "0.3"
reqwest = { version = "0.11", default-features = false, features = ["native-tls-vendored"] }
hyper = { version = "0.14", features = ["full"] }
snafu = "0.6"
url = "2.1"
tokio = { version = "1", features = ["full"] }
lz4 = "1.23"
