[workspace]
exclude = []
members = [
  "persia-embedding-config",
  "persia-common",
  "persia-simd",
  "persia-embedding-server",
  "persia-core",
  "persia-libs",
  "persia-eviction-map",
  "persia-model-manager",
  "persia-full-amount-manager",
  "persia-storage",
  "persia-embedding-holder",
  "persia-metrics",
  "others/persia-common-benchmark",
  "others/persia-nats-client",
  "others/persia-nats-marcos",
  "others/persia-rpc",
  "others/persia-rpc-macro"
]