[workspace]
exclude = []
members = [
  "persia-embedding-config",
  "persia-common",
  "persia-simd",
  "persia-embedding-server",
  "persia-core",
  "persia-libs",
  "persia-model-manager",
  "persia-storage",
  "persia-embedding-holder",
  "persia-metrics",
  "persia-speedy",
  "others/persia-common-benchmark",
  "others/persia-nats-client",
  "others/persia-nats-marcos",
  "others/persia-rpc",
  "others/persia-rpc-macro",
]
