[package]
authors = ["Kuaishou AI Platform PersiaML Team <admin@mail.xrlian.com>"]
edition = "2018"
license = "MIT"
name = "persia-core"
publish = ["private"]
version = "0.1.0"

[lib]
crate-type = ["cdylib"]
name = "persia_core"
path = "src/lib.rs"

[dependencies]
arr_macro = "0.1"
cuda-runtime-sys = {version = "0.3.0-alpha.1", optional = true}
paste = "1"
persia-common = {path = "../persia-common"}
persia-embedding-config = {path = "../persia-embedding-config"}
persia-embedding-server = {path = "../persia-embedding-server"}
persia-libs = {path = "../persia-libs"}
persia-metrics = {path = "../persia-metrics"}
persia-model-manager = {path = "../persia-model-manager"}
persia-nats-client = {path = "../others/persia-nats-client"}
persia-nats-marcos = {path = "../others/persia-nats-marcos"}
persia-storage = {path = "../persia-storage"}
persia-rpc = {path = "../others/persia-rpc"}
persia-rpc-macro = {path = "../others/persia-rpc-macro"}
persia-speedy = "0.9"
shadow-rs = "0.7"

[features]
default = []

cuda = ["cuda-runtime-sys"]

[dependencies.pyo3]
default-features = false
features = ["macros"]
version = "0.13"

[build-dependencies]
shadow-rs = "0.7"
