[package]
authors = ["Kuaishou AI Platform PersiaML Team <admin@mail.xrlian.com>"]
edition = "2018"
license = "MIT"
name = "persia-embedding-config"
publish = false
version = "0.1.0"

[dependencies]
get_if_addrs = "0.5.3"
num-traits = "0.2.6"
persia-libs = {path = "../persia-libs"}
persia-speedy = "0.9"
