[package]
authors = ["Kuaishou AI Platform PersiaML Team <admin@mail.xrlian.com>"]
edition = "2018"
license = "MIT"
name = "persia-embedding-datatypes"
publish = false
version = "0.1.0"

[dependencies]
half = {version = "1.6", features = ["alloc", "std", "serde"]}
paste = "1.0"
persia-embedding-config = {path = "../persia-embedding-config"}
persia-libs = {path = "../persia-libs"}
persia-simd = {path = "../persia-simd"}
persia-speedy = "0.9"
