[package]
authors = ["Kuaishou AI Platform PersiaML Team <zhuxuefeng@kuaishou.com>"]
edition = "2018"
license = "MIT"
name = "persia-embedding-holder"
publish = false
version = "0.1.0"

[dependencies]
persia-embedding-config = {path = "../persia-embedding-config"}
persia-common = {path = "../persia-common"}
persia-eviction-map = {path = "../persia-eviction-map"}
persia-libs = {path = "../persia-libs"}
persia-speedy = "0.9"
