[package]
authors = ["Kuaishou AI Platform PersiaML Team <zhuxuefeng@kuaishou.com>"]
edition = "2018"
license = "MIT"
name = "persia-embedding-map"
publish = false
version = "0.1.0"

[dependencies]
ahash = "0.7"
array-linked-list = "0.1"
persia-common = {path = "../persia-common"}
persia-embedding-config = {path = "../persia-embedding-config"}
persia-libs = {path = "../persia-libs"}
persia-speedy = {path = "../persia-speedy"}
smallvec = {version = "1.7.0", features = ["serde", "const_generics"]}

[dev-dependencies]
linked-hash-map = "0.5"
rand = "0.8"
rand_distr = "0.4"
tracing = "0.1"
