[package]
authors = ["Kuaishou AI Platform PersiaML Team <admin@mail.xrlian.com>"]
edition = "2018"
license = "MIT"
name = "persia-embedding-server"
version = "0.1.0"

[dependencies]
crossbeam = "0.8"
farmhash = "1"
persia-common = {path = "../persia-common", default-features = false}
persia-embedding-config = {path = "../persia-embedding-config"}
persia-embedding-holder = {path = "../persia-embedding-holder"}
persia-eviction-map = {path = "../persia-eviction-map"}
persia-full-amount-manager = {path = "../persia-full-amount-manager"}
persia-incremental-update-manager = {path = "../persia-incremental-update-manager"}
persia-libs = {path = "../persia-libs"}
persia-metrics = {path = "../persia-metrics"}
persia-model-manager = {path = "../persia-model-manager"}
persia-nats-client = {path = "../others/persia-nats-client"}
persia-nats-marcos = {path = "../others/persia-nats-marcos"}
persia-rpc = {path = "../others/persia-rpc"}
persia-rpc-macro = {path = "../others/persia-rpc-macro"}
persia-speedy = "0.9"
persia-simd = {path = "../persia-simd"}
shadow-rs = "0.7"
snafu = "0.6"
structopt = "0.3"
tokio = {version = "1.12", features = ["full"]}
tracing = "0.1"

[dev-dependencies]
rand = "0.8"

[[bin]]
name = "persia-embedding-server"
path = "src/bin/persia-embedding-server.rs"

[[bin]]
name = "persia-middleware-server"
path = "src/bin/persia-middleware-server.rs"

[build-dependencies]
shadow-rs = "0.7"
