[package]
authors = ["Kuaishou AI Platform PersiaML Team <admin@mail.xrlian.com>"]
edition = "2018"
license = "MIT"
name = "persia-embedding-sharded-server"
version = "0.1.0"

[dependencies]
crossbeam = "0.8"
farmhash = "1"
hyper = "0.14.2"
hyperloglogplus = "0.4"
lz4 = "1.23"
persia-embedding-config = {path = "../persia-embedding-config"}
persia-common = {path = "../persia-common", default-features = false}
persia-embedding-holder = {path = "../persia-embedding-holder"}
persia-eviction-map = {path = "../persia-eviction-map"}
persia-full-amount-manager = {path = "../persia-full-amount-manager"}
persia-incremental-update-manager = {path = "../persia-incremental-update-manager"}
persia-libs = {path = "../persia-libs"}
persia-metrics = {path = "../persia-metrics"}
persia-model-manager = {path = "../persia-model-manager"}
persia-nats-client = {path = "../others/persia-nats-client"}
persia-nats-marcos = {path = "../others/persia-nats-marcos"}
persia-rpc = "0.6"
persia-simd = {path = "../persia-simd"}
persia-speedy = "0.9"
serde = {version = "1.0", features = ["derive"]}
shadow-rs = "0.5"
snafu = "0.6"
structopt = "0.3"
thiserror = "1.0"
tokio = {version = "1.1", features = ["full"]}
tracing = "0.1"

[dev-dependencies]
rand = "0.8"

[[bin]]
name = "persia-embedding-sharded-server"
path = "src/bin/persia-embedding-sharded-server.rs"

[[bin]]
name = "persia-embedding-sharded-middleware"
path = "src/bin/persia-embedding-sharded-middleware.rs"

[build-dependencies]
shadow-rs = "0.5"
