[package]
authors = ["Kuaishou AI Platform PersiaML Team <admin@mail.xrlian.com>"]
edition = "2018"
license = "MIT"
name = "persia-eviction-map"
version = "0.1.0"

[dependencies]
ahash = "0.7"
hashbrown = "0.11"
hashlink = "0.7"
parking_lot = "0.11"
persia-embedding-config = {path = "../persia-embedding-config"}
persia-embedding-datatypes = {path = "../persia-embedding-datatypes", default-features = false}
persia-futures = {path = "../persia-futures"}

[dev-dependencies]
linked-hash-map = "0.5"
rand = "0.8"
rand_distr = "0.4"
tracing = "0.1"
