[package]
authors = ["Kuaishou AI Platform PersiaML Team <admin@mail.xrlian.com>"]
edition = "2018"
license = "MIT"
name = "persia-eviction-map"
version = "0.1.0"

[dependencies]
ahash = "0.7"
hashlink = "0.7"
persia-embedding-config = {path = "../persia-embedding-config"}
persia-common = {path = "../persia-common", default-features = false}
persia-libs = {path = "../persia-libs"}

[dev-dependencies]
linked-hash-map = "0.5"
rand = "0.8"
rand_distr = "0.4"
tracing = "0.1"
