[package]
authors = ["Kuaishou AI Platform PersiaML Team <admin@mail.xrlian.com>"]
edition = "2018"
license = "MIT"
name = "persia-full-amount-manager"
version = "0.1.0"

[dependencies]
persia-embedding-config = {path = "../persia-embedding-config"}
persia-common = {path = "../persia-common", default-features = false}
persia-eviction-map = {path = "../persia-eviction-map"}
persia-libs = {path = "../persia-libs"}
persia-speedy = "0.9"
