[package]
authors = ["Kuaishou AI Platform PersiaML Team <zhuxuefeng@kuaishou.com>"]
edition = "2018"
license = "MIT"
name = "persia-incremental-update-manager"
publish = false
version = "0.1.0"

[dependencies]
griddle = "0.4"
persia-embedding-config = {path = "../persia-embedding-config"}
persia-common = {path = "../persia-common"}
persia-embedding-holder = {path = "../persia-embedding-holder"}
persia-libs = {path = "../persia-libs"}
persia-metrics = {path = "../persia-metrics"}
persia-storage = {path = "../persia-storage"}
persia-speedy = "0.9"
