[package]
authors = ["Kuaishou AI Platform PersiaML Team <admin@mail.xrlian.com>"]
description = "commonly used future related things"
edition = "2018"
license = "MIT"
name = "persia-libs"
version = "0.1.0"

[dependencies]
anyhow = "1.0"
async-lock = "2.1"
backoff = {version = "0.3.0", features = ["tokio"]}
bytes = {version = "1.0", features = ["serde"]}
chrono = "0.4"
color-eyre = "0.5"
flume = "0.10"
futures = "0.3"
half = {version = "1.8", features = ["alloc", "std", "serde"]}
hashbrown = {version = "0.11.2", features = ["serde"]}
hyper = {version = "0.14.15", features = ["full"]}
hyperloglogplus = "0.4"
indexmap = {version = "1.5", features = ["serde-1"]}
itertools = "0.10"
lz4 = "1.23"
ndarray = {version = "0.15.3", features = ["serde"]}
ndarray-rand = "0.14"
once_cell = "1.3"
parking_lot = {version = "0.11", features = ["deadlock_detection"]}
rand = {version = "0.8", features = ["small_rng"]}
rayon = "1.5.1"
serde = {version = "1.0", features = ["derive"]}
serde_bytes = "0.11"
serde_yaml = "0.8"
smol = "1.0"
thiserror = "1"
tokio = {version = "1.13", features = ["full"]}
tracing = "0.1"
tracing-subscriber = {version = "0.3", features = ["env-filter"]}
url = "2.1"
